# efts-io

./: .copier-answers.yml  .coverage-tmp.html  .gitignore  404.html  CHANGELOG.md  README.md  devdeps.txt  duties.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
changelog/: index.html
code-reference/: index.html
code_of_conduct/: index.html
config/: ruff.toml
contributing/: index.html
credits/: index.html
docs/: tech_notes.md
docs/nb/: basic_usage.ipynb  design_rationale.ipynb
license/: index.html
nb/basic_usage/: index.html
nb/design_rationale/: index.html
reference/SUMMARY/: index.html
reference/efts_io/: index.html
reference/efts_io/attributes/: index.html
reference/efts_io/cli/: index.html
reference/efts_io/conventions/: index.html
reference/efts_io/debug/: index.html
reference/efts_io/dimensions/: index.html
reference/efts_io/helpers/: index.html
reference/efts_io/variables/: index.html
reference/efts_io/wrapper/: index.html
search/: search_index.json
src/efts_io/: __init__.py  _internals.py  _version.py  attributes.py  conventions.py  dimensions.py  helpers.py  variables.py  wrapper.py
tech_notes/: index.html
tests/: test_create.py  test_read_file.py
